--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Tu nombre | Portafolio</title>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
     <link rel="stylesheet" href="./node_modules/normalize.css/normalize.css">
+    <link rel="stylesheet" href="./node_modules/eins-modal/dist/css/eins-modal.min.css">
     <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet" type="text/css" />
     <link rel="stylesheet" type="text/css" href="assets/css/main.css" />
     <link rel="stylesheet" type="text/css" href="assets/css/fonts.css" />
@@ -107,7 +108,7 @@
             <h3>Experience</h3>
             <hr />
             <div>
-                <a>
+                <a data-modal-id="myModal">
                     <img src="assets/img/experience/1.svg" />
                     <h4>Trabajo 1</h4>
                 </a>
@@ -156,8 +157,21 @@
     <footer>
         <small>Developed and designed by Tu nombre. ©2021. All rights reserved.</small>
     </footer>
+
+    <!-- Modal -->
+    <div id="myModal" class="eins-modal">
+        <div class="eins-modal-content">
+            <div class="eins-modal-close"></div>
+
+            My primary work
+
+            <button class="eins-modal-close-button">OK</button>
+        </div>
+    </div>
+
     <script src="assets/js/main.js"></script>
     <script src="assets/js/fixed.js"></script>
+    <script src="./node_modules/eins-modal/dist/js/eins-modal.min.js"></script>
 </body>
 
 </html>
